2008-04-07  Mickael Remond  <mremond@process-one.net>

	* doc/guide.tex: Documented the IQ discipline {queue, N}.
	* doc/guide.html: Likewise.

2008-04-05  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix default_room_opts with default_room_options
	* doc/guide.html: Likewise

2008-04-04  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth_ldap.erl (get_vh_registered_users_number): New
	function that returns 0 registered users (EJAB-331).

	* src/ejabberd_c2s.erl (process_presence_probe): Don't route a
	presence probe to oneself (EJAB-498)

2008-04-02  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl: Add support to include additional
	configuration files. Add support for macro definition and
	usage. (EJAB-593)
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

2008-04-02  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: add condition inclusion of pep in
	disco identity (EJAB-564)

	* src/Makefile.in: Do not ignore values passed from configure
	(thanks to Justin Boffemmyer)(EJAB-592)

2008-04-01  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Updated command line parameters, epmd section
	* doc/guide.html: Likewise

	* doc/api/Makefile: Report the correct ejabberd version. When
	cleaning, remove also erlang.png

	* src/mod_muc/mod_muc_room.erl: Update source code to prevent
	warning messages from EDoc
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/nodetree_default.erl: Likewise
	* src/mod_pubsub/nodetree_virtual.erl: Likewise
	* src/mod_pubsub/pubsub.hrl: Likewise

2008-04-01  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberdctl.template: Add firewalling port range definition
	* src/ejabberdctl.cfg.example: Likewise

2008-03-31  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: Remove code of the unused listening
	socket option 'ssl' (EJAB-159)
	* src/ejabberd_app.erl: Likewise
